USDAParser.js
// Generated from USDA.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import USDAListener from './USDAListener.js';
import USDAVisitor from './USDAVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class USDAParser extends antlr4.Parser {

    static grammarFileName = "USDA.g4";
    static literalNames = [ null, "'{'", "'}'", "'def'", "'('", "')'", "','", 
                            "'='", "'=('", "'['", "']'", "':'", "'variantSet'", 
                            "'variant'", "'rel'", "'subLayers'", "'customLayerData'", 
                            "'customData'", "'layer'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, "LAYER", "IDENTIFIER", "STRING", 
                             "NUMBER", "COMMENT", "WS" ];
    static ruleNames = [ "usdFile", "layer", "layerBody", "statement", "prim", 
                         "primType", "primName", "inherits", "primBody", 
                         "primStatement", "propertySpec", "value", "arrayValue", 
                         "dictionaryValue", "keyValuePair", "timeSample", 
                         "timeSampleItem", "variantSet", "variant", "reference", 
                         "subLayer", "customLayerData", "customData", "metadataList", 
                         "metadata", "comment" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = USDAParser.ruleNames;
        this.literalNames = USDAParser.literalNames;
        this.symbolicNames = USDAParser.symbolicNames;
    }



	usdFile() {
	    let localctx = new UsdFileContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, USDAParser.RULE_usdFile);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 52;
	        this.layer();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	layer() {
	    let localctx = new LayerContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, USDAParser.RULE_layer);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 55;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===18) {
	            this.state = 54;
	            this.match(USDAParser.LAYER);
	        }

	        this.state = 57;
	        this.layerBody();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	layerBody() {
	    let localctx = new LayerBodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, USDAParser.RULE_layerBody);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 59;
	        this.match(USDAParser.T__0);
	        this.state = 63;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 4837384) !== 0)) {
	            this.state = 60;
	            this.statement();
	            this.state = 65;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 66;
	        this.match(USDAParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statement() {
	    let localctx = new StatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, USDAParser.RULE_statement);
	    try {
	        this.state = 75;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 3:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 68;
	            this.prim();
	            break;
	        case 19:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 69;
	            this.propertySpec();
	            break;
	        case 12:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 70;
	            this.variantSet();
	            break;
	        case 14:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 71;
	            this.reference();
	            break;
	        case 15:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 72;
	            this.subLayer();
	            break;
	        case 16:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 73;
	            this.customLayerData();
	            break;
	        case 22:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 74;
	            this.comment();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	prim() {
	    let localctx = new PrimContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, USDAParser.RULE_prim);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 77;
	        this.match(USDAParser.T__2);
	        this.state = 78;
	        this.primType();
	        this.state = 80;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	        if(la_===1) {
	            this.state = 79;
	            this.primName();

	        }
	        this.state = 86;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===4) {
	            this.state = 82;
	            this.match(USDAParser.T__3);
	            this.state = 83;
	            this.inherits();
	            this.state = 84;
	            this.match(USDAParser.T__4);
	        }

	        this.state = 89;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===1) {
	            this.state = 88;
	            this.primBody();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	primType() {
	    let localctx = new PrimTypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, USDAParser.RULE_primType);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 91;
	        this.match(USDAParser.IDENTIFIER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	primName() {
	    let localctx = new PrimNameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, USDAParser.RULE_primName);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 93;
	        _la = this._input.LA(1);
	        if(!(_la===19 || _la===20)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	inherits() {
	    let localctx = new InheritsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, USDAParser.RULE_inherits);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 95;
	        this.match(USDAParser.IDENTIFIER);
	        this.state = 100;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===6) {
	            this.state = 96;
	            this.match(USDAParser.T__5);
	            this.state = 97;
	            this.match(USDAParser.IDENTIFIER);
	            this.state = 102;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	primBody() {
	    let localctx = new PrimBodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, USDAParser.RULE_primBody);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 103;
	        this.match(USDAParser.T__0);
	        this.state = 107;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 4870152) !== 0)) {
	            this.state = 104;
	            this.primStatement();
	            this.state = 109;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 110;
	        this.match(USDAParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	primStatement() {
	    let localctx = new PrimStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, USDAParser.RULE_primStatement);
	    try {
	        this.state = 118;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 19:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 112;
	            this.propertySpec();
	            break;
	        case 3:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 113;
	            this.prim();
	            break;
	        case 12:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 114;
	            this.variantSet();
	            break;
	        case 14:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 115;
	            this.reference();
	            break;
	        case 17:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 116;
	            this.customData();
	            break;
	        case 22:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 117;
	            this.comment();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	propertySpec() {
	    let localctx = new PropertySpecContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, USDAParser.RULE_propertySpec);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 120;
	        this.match(USDAParser.IDENTIFIER);
	        this.state = 126;
	        this._errHandler.sync(this);
	        switch (this._input.LA(1)) {
	        case 7:
	        	this.state = 121;
	        	this.match(USDAParser.T__6);
	        	break;
	        case 8:
	        	this.state = 122;
	        	this.match(USDAParser.T__7);
	        	this.state = 123;
	        	this.metadataList();
	        	this.state = 124;
	        	this.match(USDAParser.T__4);
	        	break;
	        case 1:
	        case 9:
	        case 19:
	        case 20:
	        case 21:
	        	break;
	        default:
	        	break;
	        }
	        this.state = 128;
	        this.value();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	value() {
	    let localctx = new ValueContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, USDAParser.RULE_value);
	    try {
	        this.state = 136;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,10,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 130;
	            this.match(USDAParser.NUMBER);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 131;
	            this.match(USDAParser.STRING);
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 132;
	            this.match(USDAParser.IDENTIFIER);
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 133;
	            this.arrayValue();
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 134;
	            this.dictionaryValue();
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 135;
	            this.timeSample();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	arrayValue() {
	    let localctx = new ArrayValueContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, USDAParser.RULE_arrayValue);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 138;
	        this.match(USDAParser.T__8);
	        this.state = 147;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 3670530) !== 0)) {
	            this.state = 139;
	            this.value();
	            this.state = 144;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===6) {
	                this.state = 140;
	                this.match(USDAParser.T__5);
	                this.state = 141;
	                this.value();
	                this.state = 146;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 149;
	        this.match(USDAParser.T__9);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	dictionaryValue() {
	    let localctx = new DictionaryValueContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, USDAParser.RULE_dictionaryValue);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 151;
	        this.match(USDAParser.T__0);
	        this.state = 160;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===19 || _la===20) {
	            this.state = 152;
	            this.keyValuePair();
	            this.state = 157;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===6) {
	                this.state = 153;
	                this.match(USDAParser.T__5);
	                this.state = 154;
	                this.keyValuePair();
	                this.state = 159;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 162;
	        this.match(USDAParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	keyValuePair() {
	    let localctx = new KeyValuePairContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, USDAParser.RULE_keyValuePair);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 164;
	        _la = this._input.LA(1);
	        if(!(_la===19 || _la===20)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 165;
	        this.match(USDAParser.T__10);
	        this.state = 166;
	        this.value();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	timeSample() {
	    let localctx = new TimeSampleContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, USDAParser.RULE_timeSample);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 168;
	        this.match(USDAParser.T__0);
	        this.state = 170; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 169;
	            this.timeSampleItem();
	            this.state = 172; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===21);
	        this.state = 174;
	        this.match(USDAParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	timeSampleItem() {
	    let localctx = new TimeSampleItemContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, USDAParser.RULE_timeSampleItem);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 176;
	        this.match(USDAParser.NUMBER);
	        this.state = 177;
	        this.match(USDAParser.T__10);
	        this.state = 178;
	        this.value();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variantSet() {
	    let localctx = new VariantSetContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, USDAParser.RULE_variantSet);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 180;
	        this.match(USDAParser.T__11);
	        this.state = 181;
	        this.match(USDAParser.IDENTIFIER);
	        this.state = 182;
	        this.match(USDAParser.T__6);
	        this.state = 183;
	        this.match(USDAParser.T__0);
	        this.state = 185; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 184;
	            this.variant();
	            this.state = 187; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===13);
	        this.state = 189;
	        this.match(USDAParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variant() {
	    let localctx = new VariantContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, USDAParser.RULE_variant);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 191;
	        this.match(USDAParser.T__12);
	        this.state = 192;
	        this.match(USDAParser.STRING);
	        this.state = 193;
	        this.match(USDAParser.T__6);
	        this.state = 194;
	        this.match(USDAParser.T__0);
	        this.state = 198;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 4837384) !== 0)) {
	            this.state = 195;
	            this.statement();
	            this.state = 200;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 201;
	        this.match(USDAParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	reference() {
	    let localctx = new ReferenceContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, USDAParser.RULE_reference);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 203;
	        this.match(USDAParser.T__13);
	        this.state = 204;
	        this.match(USDAParser.IDENTIFIER);
	        this.state = 205;
	        this.match(USDAParser.T__6);
	        this.state = 206;
	        _la = this._input.LA(1);
	        if(!(_la===19 || _la===20)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	subLayer() {
	    let localctx = new SubLayerContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, USDAParser.RULE_subLayer);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 208;
	        this.match(USDAParser.T__14);
	        this.state = 209;
	        this.match(USDAParser.T__6);
	        this.state = 210;
	        this.match(USDAParser.T__8);
	        this.state = 211;
	        this.match(USDAParser.STRING);
	        this.state = 216;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===6) {
	            this.state = 212;
	            this.match(USDAParser.T__5);
	            this.state = 213;
	            this.match(USDAParser.STRING);
	            this.state = 218;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 219;
	        this.match(USDAParser.T__9);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	customLayerData() {
	    let localctx = new CustomLayerDataContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, USDAParser.RULE_customLayerData);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 221;
	        this.match(USDAParser.T__15);
	        this.state = 222;
	        this.dictionaryValue();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	customData() {
	    let localctx = new CustomDataContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 44, USDAParser.RULE_customData);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 224;
	        this.match(USDAParser.T__16);
	        this.state = 225;
	        this.dictionaryValue();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	metadataList() {
	    let localctx = new MetadataListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 46, USDAParser.RULE_metadataList);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 227;
	        this.metadata();
	        this.state = 232;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===6) {
	            this.state = 228;
	            this.match(USDAParser.T__5);
	            this.state = 229;
	            this.metadata();
	            this.state = 234;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	metadata() {
	    let localctx = new MetadataContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 48, USDAParser.RULE_metadata);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 235;
	        this.match(USDAParser.IDENTIFIER);
	        this.state = 238;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===7) {
	            this.state = 236;
	            this.match(USDAParser.T__6);
	            this.state = 237;
	            this.value();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	comment() {
	    let localctx = new CommentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 50, USDAParser.RULE_comment);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 240;
	        this.match(USDAParser.COMMENT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

USDAParser.EOF = antlr4.Token.EOF;
USDAParser.T__0 = 1;
USDAParser.T__1 = 2;
USDAParser.T__2 = 3;
USDAParser.T__3 = 4;
USDAParser.T__4 = 5;
USDAParser.T__5 = 6;
USDAParser.T__6 = 7;
USDAParser.T__7 = 8;
USDAParser.T__8 = 9;
USDAParser.T__9 = 10;
USDAParser.T__10 = 11;
USDAParser.T__11 = 12;
USDAParser.T__12 = 13;
USDAParser.T__13 = 14;
USDAParser.T__14 = 15;
USDAParser.T__15 = 16;
USDAParser.T__16 = 17;
USDAParser.LAYER = 18;
USDAParser.IDENTIFIER = 19;
USDAParser.STRING = 20;
USDAParser.NUMBER = 21;
USDAParser.COMMENT = 22;
USDAParser.WS = 23;

USDAParser.RULE_usdFile = 0;
USDAParser.RULE_layer = 1;
USDAParser.RULE_layerBody = 2;
USDAParser.RULE_statement = 3;
USDAParser.RULE_prim = 4;
USDAParser.RULE_primType = 5;
USDAParser.RULE_primName = 6;
USDAParser.RULE_inherits = 7;
USDAParser.RULE_primBody = 8;
USDAParser.RULE_primStatement = 9;
USDAParser.RULE_propertySpec = 10;
USDAParser.RULE_value = 11;
USDAParser.RULE_arrayValue = 12;
USDAParser.RULE_dictionaryValue = 13;
USDAParser.RULE_keyValuePair = 14;
USDAParser.RULE_timeSample = 15;
USDAParser.RULE_timeSampleItem = 16;
USDAParser.RULE_variantSet = 17;
USDAParser.RULE_variant = 18;
USDAParser.RULE_reference = 19;
USDAParser.RULE_subLayer = 20;
USDAParser.RULE_customLayerData = 21;
USDAParser.RULE_customData = 22;
USDAParser.RULE_metadataList = 23;
USDAParser.RULE_metadata = 24;
USDAParser.RULE_comment = 25;

class UsdFileContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = USDAParser.RULE_usdFile;
    }

	layer() {
	    return this.getTypedRuleContext(LayerContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof USDAListener ) {
	        listener.enterUsdFile(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof USDAListener ) {
	        listener.exitUsdFile(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof USDAVisitor ) {
	        return visitor.visitUsdFile(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class LayerContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = USDAParser.RULE_layer;
    }

	layerBody() {
	    return this.getTypedRuleContext(LayerBodyContext,0);
	};

	LAYER() {
	    return this.getToken(USDAParser.LAYER, 0);
	};

	enterRule(listener) {
	    if(listener instanceof USDAListener ) {
	        listener.enterLayer(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof USDAListener ) {
	        listener.exitLayer(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof USDAVisitor ) {
	        return visitor.visitLayer(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class LayerBodyContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = USDAParser.RULE_layerBody;
    }

	statement = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(StatementContext);
	    } else {
	        return this.getTypedRuleContext(StatementContext,i);
	    }
	};
